# smart_enum

./: .gitignore  CMakeLists.txt  EnglishSuits.hpp  catch.hpp  main.cpp  pointee_comparator.hpp  smart_enum.hpp
